--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.8",
+    "@types/crypto-js": "^4.2.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-router-hash-link": "^2.4.9",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
