--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-hash-link": "^2.4.9",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.0.6",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
