--- a/firebase.json
+++ b/firebase.json
@@ -2,5 +2,17 @@
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
+  },
+  "hosting": {
+    "public": "dist/app",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "github": {
+      "repo": "Ryan9771/comfy-mind",
+      "branch": "main"
+    }
   }
 }
