--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@langchain/openai": "^0.0.12",
     "@material-tailwind/react": "^2.1.8",
     "@types/crypto-js": "^4.2.1",
     "@types/react-router-dom": "^5.3.3",
