--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@langchain/openai": "^0.0.12",
     "@material-tailwind/react": "^2.1.8",
     "@types/crypto-js": "^4.2.1",
     "@types/react-router-dom": "^5.3.3",
@@ -18,6 +17,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
+    "openai": "^4.25.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
